--- a/README
+++ b/README
@@ -74,5 +74,5 @@ On the secure offline machine:
 ==========
 
 * support Captcha
-* produce informative error message if required fields empty (like: which?) or accidental resubmit
+* write ajax submit2.php which produces informative error message if required fields empty (like: which?) or accidental resubmit
 * think of something so database structure need only be changed in one place instead of ~10
